[gd_scene load_steps=6 format=3 uid="uid://b7x43dhlrjpam"]

[ext_resource type="Script" uid="uid://cqqexru0hi346" path="res://Scripts/game_over.gd" id="1_7uvq2"]
[ext_resource type="FontFile" uid="uid://qceu1igxm6sk" path="res://Assets/Fonts/Retro Pixel/thick/retro-pixel-thick.otf" id="2_si0el"]
[ext_resource type="FontFile" uid="uid://6ik02l1yg1ii" path="res://Assets/Fonts/Fusion Pixel 10px Monospaced/fusion-pixel-10px-monospaced-zh_hans.otf" id="3_cafvw"]

[sub_resource type="LabelSettings" id="LabelSettings_y2c35"]
font_size = 141

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3hoqq"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="GameOver" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_7uvq2")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0.6431373)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -232.0
offset_top = -224.0
offset_right = 191.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_si0el")
text = "GAME OVER"
label_settings = SubResource("LabelSettings_y2c35")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Main" type="Control" parent="ColorRect"]
anchors_preset = 0
offset_top = -16.0
offset_right = 40.0
offset_bottom = 24.0

[node name="Button2" type="Button" parent="ColorRect/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 428.0
offset_top = 348.0
offset_right = 772.0
offset_bottom = 396.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_cafvw")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_3hoqq")
text = "Try again, Gatto!"

[node name="Button4" type="Button" parent="ColorRect/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 428.0
offset_top = 412.0
offset_right = 772.0
offset_bottom = 460.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_cafvw")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_3hoqq")
text = "Bye-bye, Gatto :("

[node name="Button" type="Button" parent="."]
visible = false
offset_right = 27.0
offset_bottom = 31.0
scale = Vector2(3.12, 3.12)
text = " II "

[node name="SFX_Click" type="AudioStreamPlayer" parent="."]
process_mode = 3

[connection signal="pressed" from="ColorRect/Main/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="ColorRect/Main/Button4" to="." method="_on_button_4_pressed"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
